Initial commit - IDFM Transport routing engine (Dijkstra, JavaFX, Maven)